# SPDX-License-Identifier: Apache-2.0

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_fpv_test_tools_suite")
load("//bazel:verilog.bzl", "verilog_elab_test")

package(default_visibility = ["//visibility:private"])

##################################################################
# Bedrock-RTL Credit Counter

verilog_library(
    name = "br_credit_counter_fpv_monitor",
    srcs = ["br_credit_counter_fpv_monitor.sv"],
    deps = [
        "//credit/rtl:br_credit_counter",
        "//macros:br_fv",
    ],
)

verilog_elab_test(
    name = "br_credit_counter_fpv_monitor_elab_test",
    custom_tcl_header = "//:elab_test_jg_custom_header.verific.tcl",
    tool = "verific",
    deps = [":br_credit_counter_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_credit_counter_test_suite",
    illegal_param_combinations = {
        (
            "MaxChange",
            "MaxValue",
        ): [
            ("2", "1"),
            ("3", "1"),
        ],
    },
    params = {
        "MaxChange": [
            "1",
            "2",
            "3",
        ],
        "MaxValue": [
            "1",
            "5",
            "6",
        ],
    },
    tools = {
        "jg": "br_credit_counter_fpv.jg.tcl",
    },
    top = "br_credit_counter",
    deps = [":br_credit_counter_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_credit_counter_test_max",
    elab_opts = [
        "-parameter MaxValue 4294967295",
        "-parameter MaxChange 4294967295",
    ],
    tools = {
        "jg": "br_credit_counter_fpv.jg.tcl",
    },
    top = "br_credit_counter",
    deps = [":br_credit_counter_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_credit_counter_test_max_override",
    elab_opts = [
        "-parameter MaxValueWidth 64",
        "-parameter MaxChangeWidth 64",
        "-parameter MaxChange 18446744073709551615",
        "-parameter MaxValue 18446744073709551615",
    ],
    tools = {
        "jg": "br_credit_counter_fpv.jg.tcl",
    },
    top = "br_credit_counter",
    deps = [":br_credit_counter_fpv_monitor"],
)

##################################################################
# Bedrock-RTL Credit Receiver
verilog_library(
    name = "br_credit_receiver_fpv_monitor",
    srcs = ["br_credit_receiver_fpv_monitor.sv"],
    visibility = [
        "//cdc/fpv:__subpackages__",
        "//fifo/fpv:__subpackages__",
    ],
    deps = [
        "//credit/rtl:br_credit_receiver",
        "//macros:br_fv",
    ],
)

verilog_elab_test(
    name = "br_credit_receiver_fpv_monitor_elab_test",
    custom_tcl_header = "//:elab_test_jg_custom_header.verific.tcl",
    tool = "verific",
    deps = [":br_credit_receiver_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_credit_receiver_test_suite",
    illegal_param_combinations = {
        (
            "PopCreditMaxChange",
            "MaxCredit",
        ): [
            ("2", "1"),
            ("3", "1"),
        ],
        (
            "PushCreditMaxChange",
            "MaxCredit",
        ): [
            ("2", "1"),
            ("3", "1"),
        ],
        (
            "MaxCredit",
            "NumFlows",
        ): [
            ("1", "2"),
            ("1", "4"),
        ],
    },
    params = {
        "MaxCredit": [
            "1",
            "5",
            "6",
        ],
        "NumFlows": [
            "1",
            "2",
            "4",
        ],
        "PopCreditMaxChange": [
            "1",
            "2",
            "3",
        ],
        "PushCreditMaxChange": [
            "1",
            "2",
            "3",
        ],
        "RegisterPushOutputs": [
            "0",
            "1",
        ],
        "Width": [
            "1",
            "5",
            "6",
        ],
    },
    tools = {
        "jg": "br_credit_receiver_fpv.jg.tcl",
    },
    top = "br_credit_receiver",
    deps = [":br_credit_receiver_fpv_monitor"],
)

##################################################################
# Bedrock-RTL Credit Sender
verilog_library(
    name = "br_credit_sender_fpv_monitor",
    srcs = ["br_credit_sender_fpv_monitor.sv"],
    deps = [
        "//credit/rtl:br_credit_sender",
        "//macros:br_fv",
    ],
)

verilog_elab_test(
    name = "br_credit_sender_fpv_monitor_elab_test",
    custom_tcl_header = "//:elab_test_jg_custom_header.verific.tcl",
    tool = "verific",
    deps = [":br_credit_sender_fpv_monitor"],
)

# test valid ready protocol
br_verilog_fpv_test_tools_suite(
    name = "br_credit_sender_test_backpressure",
    illegal_param_combinations = {
        (
            "EnableCoverPushBackpressure",
            "EnableAssumePushValidStability",
            "EnableAssumePushDataStability",
        ): [
            ("0", "0", "1"),
            ("0", "1", "0"),
            ("0", "1", "1"),
            ("1", "0", "1"),
        ],
    },
    params = {
        "EnableCoverPushBackpressure": [
            "0",
            "1",
        ],
        "EnableAssumePushDataStability": [
            "0",
            "1",
        ],
        "EnableAssumePushValidStability": [
            "0",
            "1",
        ],
    },
    tools = {
        "jg": "br_credit_sender_fpv.jg.tcl",
    },
    top = "br_credit_sender",
    deps = [":br_credit_sender_fpv_monitor"],
)

br_verilog_fpv_test_tools_suite(
    name = "br_credit_sender_test_suite",
    illegal_param_combinations = {
        (
            "PopCreditMaxChange",
            "MaxCredit",
        ): [
            ("2", "1"),
            ("3", "1"),
        ],
        (
            "MaxCredit",
            "NumFlows",
        ): [
            ("1", "2"),
            ("1", "4"),
        ],
    },
    params = {
        "MaxCredit": [
            "1",
            "5",
            "6",
        ],
        "NumFlows": [
            "1",
            "2",
            "4",
        ],
        "PopCreditMaxChange": [
            "1",
            "2",
            "3",
        ],
        "RegisterPopOutputs": [
            "0",
            "1",
        ],
        "Width": [
            "1",
            "5",
            "6",
        ],
    },
    tools = {
        "jg": "br_credit_sender_fpv.jg.tcl",
    },
    top = "br_credit_sender",
    deps = [":br_credit_sender_fpv_monitor"],
)
