# SPDX-License-Identifier: Apache-2.0

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_elab_and_lint_test_suite", "br_verilog_synth_suite")

package(default_visibility = ["//visibility:public"])

verilog_library(
    name = "br_credit_counter",
    srcs = ["br_credit_counter.sv"],
    deps = [
        "//macros:br_asserts_internal",
        "//macros:br_registers",
    ],
)

br_verilog_synth_suite(
    name = "br_credit_counter_small_ppa",
    params = {
        "MaxChange": ["1"],
        "MaxValue": ["8"],
    },
    deps = [":br_credit_counter"],
)

br_verilog_synth_suite(
    name = "br_credit_counter_scaled_ppa",
    params = {
        "MaxChange": ["4"],
        "MaxValue": ["16"],
    },
    deps = [":br_credit_counter"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_credit_counter_test_suite_basic",
    params = {
        "MaxValue": [
            "1",
            "2",
        ],
        "MaxChange": [
            "1",
        ],
    },
    deps = [":br_credit_counter"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_credit_counter_test_suite_pow_of_2_minus_1",
    params = {
        "MaxValue": [
            "3",
        ],
        "MaxChange": [
            "1",
            "2",
            "3",
        ],
    },
    deps = [":br_credit_counter"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_credit_counter_test_suite_pow_of_2",
    params = {
        "MaxValue": [
            "4",
        ],
        "MaxChange": [
            "1",
            "2",
            "3",
            "4",
        ],
    },
    deps = [":br_credit_counter"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_credit_counter_test_suite_no_decrement_backpressure",
    params = {
        "MaxValue": [
            "2",
            "4",
        ],
        "MaxChange": [
            "1",
            "2",
        ],
        "EnableCoverDecrementBackpressure": [
            "0",
        ],
        "EnableAssertNoDecrementBackpressure": [
            "0",
            "1",
        ],
    },
    deps = [":br_credit_counter"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_credit_counter_test_suite_cover_controls_do_not_optimize",
    params = {
        "MaxValue": ["2"],
        "MaxChange": ["1"],
        "EnableCoverZeroIncrement": ["0"],
        "EnableCoverWithhold": ["0"],
    },
    deps = [":br_credit_counter"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_credit_counter_test_suite_decr_ready_optimizations",
    params = {
        "MaxValue": ["2"],
        "MaxChange": ["1"],
        "OptimizeDecrReadyForNoWithhold": ["1"],
        "OptimizeDecrReadyForNonzeroIncrement": [
            "0",
            "1",
        ],
        "EnableCoverZeroIncrement": ["0"],
        "EnableCoverWithhold": ["0"],
    },
    deps = [":br_credit_counter"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_credit_counter_test_suite_large_maxes",
    params = {
        "MaxValueWidth": ["64"],
        "MaxChangeWidth": ["64"],
        "MaxValue": [
            "18446744073709551615",
            "18446744073709551614",
        ],
        "MaxChange": ["18446744073709551614"],
    },
    deps = [":br_credit_counter"],
)

verilog_library(
    name = "br_credit_sender",
    srcs = ["br_credit_sender.sv"],
    deps = [
        ":br_credit_counter",
        "//arb/rtl:br_arb_multi_rr",
        "//flow/rtl/internal:br_flow_checks_valid_data_intg",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
        "//pkg:br_math_pkg",
    ],
)

br_verilog_synth_suite(
    name = "br_credit_sender_small_ppa",
    params = {
        "MaxCredit": ["8"],
        "NumFlows": ["1"],
        "PopCreditMaxChange": ["1"],
        "RegisterPopOutputs": ["0"],
        "Width": ["32"],
    },
    deps = [":br_credit_sender"],
)

br_verilog_synth_suite(
    name = "br_credit_sender_scaled_ppa",
    params = {
        "MaxCredit": ["16"],
        "NumFlows": ["4"],
        "PopCreditMaxChange": ["4"],
        "RegisterPopOutputs": ["1"],
        "Width": ["64"],
    },
    deps = [":br_credit_sender"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_credit_sender_test_suite",
    params = {
        "MaxCredit": [
            "1",
            "3",
            "8",
        ],
        "Width": [
            "1",
            "16",
        ],
        "RegisterPopOutputs": [
            "0",
            "1",
        ],
    },
    deps = [":br_credit_sender"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_credit_sender_test_suite_multi_flow",
    params = {
        "NumFlows": [
            "2",
            "5",
        ],
        "PopCreditMaxChange": [
            "2",
            "5",
        ],
        "MaxCredit": [
            "8",
        ],
        "RegisterPopOutputs": [
            "0",
            "1",
        ],
    },
    deps = [":br_credit_sender"],
)

verilog_library(
    name = "br_credit_receiver",
    srcs = ["br_credit_receiver.sv"],
    deps = [
        ":br_credit_counter",
        "//macros:br_asserts_internal",
        "//pkg:br_math_pkg",
    ],
)

br_verilog_synth_suite(
    name = "br_credit_receiver_small_ppa",
    params = {
        "MaxCredit": ["8"],
        "NumFlows": ["1"],
        "PopCreditMaxChange": ["1"],
        "PushCreditMaxChange": ["1"],
        "RegisterPushOutputs": ["0"],
        "Width": ["32"],
    },
    deps = [":br_credit_receiver"],
)

br_verilog_synth_suite(
    name = "br_credit_receiver_scaled_ppa",
    params = {
        "MaxCredit": ["16"],
        "NumFlows": ["4"],
        "PopCreditMaxChange": ["4"],
        "PushCreditMaxChange": ["4"],
        "RegisterPushOutputs": ["1"],
        "Width": ["64"],
    },
    deps = [":br_credit_receiver"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_credit_receiver_test_suite_basic",
    params = {
        "MaxCredit": [
            "3",
            "8",
        ],
        "Width": [
            "1",
            "16",
        ],
        "RegisterPushOutputs": [
            "0",
            "1",
        ],
        "PopCreditMaxChange": [
            "1",
            "3",
        ],
    },
    deps = [":br_credit_receiver"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_credit_receiver_test_suite_multi_push",
    params = {
        "NumFlows": [
            "2",
            "3",
        ],
        "MaxCredit": ["5"],
        "PopCreditMaxChange": ["3"],
        "RegisterPushOutputs": [
            "0",
            "1",
        ],
        "PushCreditMaxChange": [
            "1",
            "2",
            "3",
        ],
    },
    deps = [":br_credit_receiver"],
)

verilog_library(
    name = "br_credit_sender_vc",
    srcs = ["br_credit_sender_vc.sv"],
    deps = [
        "//credit/rtl:br_credit_counter",
        "//delay/rtl:br_delay_nr",
        "//delay/rtl:br_delay_valid",
        "//enc/rtl:br_enc_onehot2bin",
        "//flow/rtl:br_flow_fork",
        "//flow/rtl/internal:br_flow_mux_core",
        "//macros:br_asserts_internal",
    ],
)

br_verilog_synth_suite(
    name = "br_credit_sender_vc_small_ppa",
    params = {
        "MaxCredit": ["8"],
        "NumVcs": ["2"],
        "PopCreditMaxChange": ["1"],
        "RegisterPopOutputs": ["0"],
        "Width": ["32"],
    },
    deps = [":br_credit_sender_vc"],
)

br_verilog_synth_suite(
    name = "br_credit_sender_vc_scaled_ppa",
    params = {
        "MaxCredit": ["16"],
        "NumVcs": ["4"],
        "PopCreditMaxChange": ["4"],
        "RegisterPopOutputs": ["1"],
        "Width": ["64"],
    },
    deps = [":br_credit_sender_vc"],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_credit_sender_vc_test_suite",
    params = {
        "NumVcs": [
            "2",
            "3",
        ],
        "Width": ["8"],
        "MaxCredit": [
            "3",
            "8",
        ],
        "PopCreditMaxChange": [
            "1",
            "3",
        ],
        "RegisterPopOutputs": [
            "0",
            "1",
        ],
    },
    deps = [":br_credit_sender_vc"],
)
