# Copyright 2024-2025 The Bedrock-RTL Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_sim_test_tools_suite")
load("//bazel:verilog.bzl", "verilog_elab_test")

package(default_visibility = ["//visibility:private"])

verilog_library(
    name = "br_credit_receiver_tb",
    srcs = ["br_credit_receiver_tb.sv"],
    deps = [
        "//credit/rtl:br_credit_receiver",
        "//misc/sim:br_test_driver",
    ],
)

verilog_elab_test(
    name = "br_credit_receiver_tb_elab_test",
    tool = "verific",
    deps = [":br_credit_receiver_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_credit_receiver_sim_test_tools_suite",
    params = {
        "Width": ["8"],
        "MaxCredit": [
            "4",
            "7",
        ],
        "RegisterPushOutputs": [
            "0",
            "1",
        ],
        "PopCreditMaxChange": [
            "1",
            "2",
        ],
    },
    tools = [
        "dsim",
        "iverilog",
        "vcs",
    ],
    deps = [":br_credit_receiver_tb"],
)

verilog_library(
    name = "br_credit_sender_vc_rr_tb",
    srcs = ["br_credit_sender_vc_rr_tb.sv"],
    deps = [
        "//arb/rtl/internal:br_arb_rr_internal",
        "//credit/rtl:br_credit_sender_vc",
        "//misc/sim:br_test_driver",
        "//pkg:br_math_pkg",
    ],
)

verilog_elab_test(
    name = "br_credit_sender_vc_rr_tb_elab_test",
    tool = "verific",
    deps = [":br_credit_sender_vc_rr_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_credit_sender_vc_rr_sim_test_tools_suite",
    params = {
        "NumVcs": [
            "2",
            "4",
        ],
        "Width": ["8"],
        "MaxCredit": [
            "4",
            "7",
        ],
        "PopCreditMaxChange": [
            "1",
            "3",
        ],
        "RegisterPopOutputs": [
            "0",
            "1",
        ],
    },
    tools = [
        "dsim",
        # This test is triggering an internal assertion failure in iverilog.
        # TODO(zhemao): Figure out why this is happening.
        #"iverilog",
        "vcs",
    ],
    deps = [":br_credit_sender_vc_rr_tb"],
)
