# SPDX-License-Identifier: Apache-2.0

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_sim_test_tools_suite")
load("//bazel:verilog.bzl", "verilog_elab_test", "verilog_sim_coverage_aggregate")

package(default_visibility = ["//visibility:private"])

verilog_library(
    name = "br_credit_receiver_tb",
    srcs = ["br_credit_receiver_tb.sv"],
    deps = [
        "//credit/rtl:br_credit_receiver",
        "//misc/sim:br_test_driver",
    ],
)

verilog_elab_test(
    name = "br_credit_receiver_tb_elab_test",
    tool = "slang",
    deps = [":br_credit_receiver_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_credit_receiver_sim_test_tools_suite",
    params = {
        "Width": ["8"],
        "MaxCredit": [
            "4",
            "7",
        ],
        "RegisterPushOutputs": [
            "0",
            "1",
        ],
        "PopCreditMaxChange": [
            "1",
            "2",
        ],
    },
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_credit_receiver_tb"],
)

verilog_library(
    name = "br_credit_sender_vc_rr_tb",
    srcs = ["br_credit_sender_vc_rr_tb.sv"],
    deps = [
        "//arb/rtl/internal:br_arb_rr_internal",
        "//credit/rtl:br_credit_sender_vc",
        "//misc/sim:br_test_driver",
        "//pkg:br_math_pkg",
    ],
)

verilog_elab_test(
    name = "br_credit_sender_vc_rr_tb_elab_test",
    tool = "slang",
    deps = [":br_credit_sender_vc_rr_tb"],
)

br_verilog_sim_test_tools_suite(
    name = "br_credit_sender_vc_rr_sim_test_tools_suite",
    params = {
        "NumVcs": [
            "2",
            "4",
        ],
        "Width": ["8"],
        "MaxCredit": [
            "4",
            "7",
        ],
        "PopCreditMaxChange": [
            "1",
            "3",
        ],
        "RegisterPopOutputs": [
            "0",
            "1",
        ],
    },
    tools = [
        "vcs",
        "verilator",
    ],
    deps = [":br_credit_sender_vc_rr_tb"],
)

verilog_sim_coverage_aggregate(
    name = "br_credit_verilator_coverage",
    coverage_reports = [
        ":br_credit_receiver_sim_test_tools_suite_verilator_coverage",
        # Re-enable after confirming that test suite with coverage gathering passes
        # ":br_credit_sender_vc_rr_sim_test_tools_suite_verilator_coverage",
    ],
    visibility = ["//:__pkg__"],
)
