# Copyright 2024-2025 The Bedrock-RTL Authors
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

load("@rules_hdl//verilog:providers.bzl", "verilog_library")
load("//bazel:br_verilog.bzl", "br_verilog_elab_and_lint_test_suite")

package(default_visibility = ["//visibility:public"])

verilog_library(
    name = "br_csr_axil_widget",
    srcs = ["br_csr_axil_widget.sv"],
    deps = [
        "//amba/rtl:br_amba_pkg",
        "//flow/rtl:br_flow_demux_select_unstable",
        "//flow/rtl:br_flow_join",
        "//flow/rtl:br_flow_mux_rr_stable",
        "//flow/rtl:br_flow_reg_fwd",
        "//macros:br_asserts_internal",
        "//macros:br_registers",
        "//tracker/rtl:br_tracker_reorder_buffer_flops",
    ],
)

br_verilog_elab_and_lint_test_suite(
    name = "br_csr_axil_widget_test_suite",
    params = {
        "AddrWidth": ["16"],
        "DataWidth": [
            "32",
            "64",
        ],
        "NumOutstanding": [
            "1",
            "4",
        ],
        "RegisterResponseOutputs": [
            "0",
            "1",
        ],
    },
    deps = [":br_csr_axil_widget"],
)
